--- a/vignettes/apsimx.Rmd
+++ b/vignettes/apsimx.Rmd
@@ -394,7 +394,17 @@ I won't be running the 'Factorial' example here, but if you are interested this 
 
 # APSIM-X Inputs: Weather and Soil
 
-One of the easiest ways of generating weather data (".met"" files) is by using the 'nasapower' R package (https://github.com/ropensci/nasapower). See function 'create_met'. 
+## Obtaining weather data
+
+One of the easiest ways of generating weather data (".met"" files) is by using the 'nasapower' R package (https://github.com/ropensci/nasapower). See function 'create_met'. In addition in this package the following utilities are provided:
+
+* **read_apsim_met**: read an APSIM met file into R with S3 class 'met'.
+* **write_apsim_met**: write an APSIM met file from an object of class 'met'.
+* **check_apsim_met**: check for reasonable values for met variables.
+* **impute_apsim_met**: impute missing values using linear interpolation, splines or the mean.
+* **get_power_apsim_met**: (requires the 'nasapower' package). Fetch data and create a 'met' R object and write a met file to disk.
+
+Note that similar utilities are available in the 'APSIM' package (loadMet, prepareMet, checkMet, writeMetFile) for reading, preparing, checking and writing a met file, but not for imputing.
 
 In the USA, soil data can be obtained through the 'FedData' R package (https://github.com/ropensci/FedData) by using the function 'get_ssurgo'. I have developed helper functions 'ssurgo2sp' for conversion from 'SSURGO' files to a soil profile and 'apsimx_soil_profile' for generating a soil profile that can be used in APSIM-X. Finally, the function 'edit_apsimx_replace_soil_profile' will batch replace the soil profile created by 'apsimx_soil_profile' in a designated '.apsimx' file. I will be working on a more concrete tutorial soon.
 
@@ -432,14 +442,10 @@ examples
 
 * Add more tests using the 'CoverCrop example' (APSIM 'Classic'). This would be the motivation for writing a function for 'factorials'. 'edit_apsim_factorial'.
 
-* Create and reaplce an APSIM soil profile out of SSURGO data
+* Create and reaplce an APSIM soil profile out of SSURGO data for 'Classic'
+
+* Add the ability to edit the SWIM module for 'Classic'
 
 * Include parameter estimation example for maize
 
-# Future features
 
-* Do we need a custom function for editing the depth of the soil profile? 'edit_apsimx_depth'? The issue really is what kind of inconsistencies are possible if depth is not consistent across variables because it is possible to edit the depth now.
-
-* Improve implementation of read_apsimx_all 
-
-* Add tools for optimization and sensitivity analysis.
